--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>peasonal resume</title>
+    <title>Ellen Guo - 郭焕明个人简历</title>
     <link rel="stylesheet" href="./static/css/resume.css">
 </head>
 
@@ -12,7 +12,7 @@
         <header>
             <div class="img-header">
                 <div class="content">
-                    <p>&lt;title&gt;<strong> ON THE WAY </strong>&lt;/title&gt;</p>
+                    <p><strong> 呀哟喂 </strong></p>
                 </div>
             </div>
         </header>
@@ -24,15 +24,15 @@
                     </div>
                     <div class="col-9 item">
                         <p class="title name">
-                            郭焕明 Ellen
+                            郭焕明 Ellen Guo
                         </p>
                         <div class="col-6">
-                            <p class="phone">135 1111 8888</p>
-                            <p class="education">多媒体 | 大专</p>
+                            <p class="qq">QQ</p>
+                            <p class="education">1770681273</p>
                         </div>
                         <div class="col-6">
-                            <p class="email">XXXXXX@sina.com</p>
-                            <p class="profession">多媒体</p>
+                            <p class="email">Email</p>
+                            <p class="profession">1770681273@qq.com</p>
                         </div>
                     </div>
                 </div>
@@ -51,15 +51,12 @@
                     <div class="col-6 skill">
                         <div class="item">
                             <p class="title">
-                                熟练语言
+                                熟练软件
                             </p>
                             <div class="lang">
-                                <lable>LINUX</lable>
-                                <lable>PYTHON</lable>
-                                <lable>JQUERY</lable>
-                                <lable>HTML</lable>
-                                <lable>PHP</lable>
-                                <lable>PHOTOSHOP</lable>
+                                <lable>AE</lable>
+                                <lable>PR</lable>
+                                <lable>PS</lable>
                             </div>
                         </div>
                     </div>
