--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="information-all">
                 <div class="col-6-asb">
                     <div class="col-3 peasonal">
-                        <img class="peasonal-image" src="./static/image/gou.png" alt="">
+                        <img class="peasonal-image" src="./static/image/peason.png" alt="">
                     </div>
                     <div class="col-9 item">
                         <p class="title name">
