--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Ellen Guo - 郭焕明个人简历</title>
+    <title>Ellen GUO - 郭焕明个人简历</title>
     <link rel="stylesheet" href="./static/css/resume.css">
 </head>
 
@@ -11,16 +11,16 @@
     <div class="container">
         <header>
             <div class="img-header">
-                <div class="content">
-                    <p><strong> 呀哟喂 </strong></p>
-                </div>
+                <!--<div class="content">-->
+                    <!--<p><strong> 呀哟喂 </strong></p>-->
+                <!--</div>-->
             </div>
         </header>
         <main>
             <div class="information-all">
                 <div class="col-6-asb">
                     <div class="col-3 peasonal">
-                        <img class="peasonal-image" src="./static/image/peason.png" alt="">
+                        <img class="peasonal-image" src="./static/image/tx1.png" alt="">
                     </div>
                     <div class="col-9 item">
                         <p class="title name">
@@ -43,8 +43,8 @@
                                 关于我
                             </p>
                             <ul>
-                                <li>2年后台开发、前端实战经验</li>
-                                <li>发展方向：全栈程序员</li>
+                                <li>抗压性强、学习能力强</li>
+                                <li>对工作及学习有绝对的热情</li>
                             </ul>
                         </div>
                     </div>
@@ -57,51 +57,12 @@
                                 <lable>AE</lable>
                                 <lable>PR</lable>
                                 <lable>PS</lable>
+                                <lable>3DMAX</lable>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <section>
-                <div class="title project">
-                    <p>项目经验</p>
-                </div>
-                <div class="project-detail">
-                    <div class="col-3-abs" id="project-0">
-                        <div class="project-content"> <img src="./static/image/LOGO1.png" alt="">
-                            <p class="project-title">Paxxal后台搭建</p>
-                            <p class="create-time">2014.8 - 2014.9</p>
-                            <p class="decription"> 该作品使用了MVC设计模式，SqlServer数据库，Servlet、jquery ajax的技术上制作的一个动态购物网站，实现了在数据库查询出商品显示在页面上，实现了购物车与购买功能，并对数据库进行相应操作。 </p>
-                        </div>
-                        <div class="link-to">
-                            <a href="https://www.baidu.com" class="button">查看DEMO</a>
-                            <div class="shadow"></div>
-                        </div>
-                    </div>
-                    <div class="col-3-abs" id="project-1">
-                        <div class="project-content"> <img src="./static/image/LOGO2.png" alt="">
-                            <p class="project-title">聊天应用开发</p>
-                            <p class="create-time">2014.8 - 2014.9</p>
-                            <p class="decription"> 该作品使用了MVC设计模式，SqlServer数据库，Servlet、jquery ajax的技术上制作的一个动态购物网站，实现了在数据库查询出商品显示在页面上，实现了购物车与购买功能，并对数据库进行相应操作。 </p>
-                        </div>
-                        <div class="link-to">
-                            <a href="https://www.baidu.com" class="button">查看DEMO</a>
-                            <div class="shadow"></div>
-                        </div>
-                    </div>
-                    <div class="col-3-abs endline" id="project-2">
-                        <div class="project-content"> <img src="./static/image/LOGO3.png" alt="">
-                            <p class="project-title">购物商城前端搭建</p>
-                            <p class="create-time">2014.8 - 2014.9</p>
-                            <p class="decription"> 该作品使用了MVC设计模式，SqlServer数据库，Servlet、jquery ajax的技术上制作的一个动态购物网站，实现了在数据库查询出商品显示在页面上，实现了购物车与购买功能，并对数据库进行相应操作。 </p>
-                        </div>
-                        <div class="link-to">
-                            <a href="https://www.baidu.com" class="button">查看DEMO</a>
-                            <div class="shadow"></div>
-                        </div>
-                    </div>
-                </div>
-            </section>
             <section>
                 <div class="title work">
                     <p>工作经历</p>
@@ -112,14 +73,10 @@
                             <img class="company-logo" src="./static/image/LOGO4.png" alt="">
                         </div>
                         <div class="work-content">
-                            <p class="create-time">2014.10 - 2016.10</p>
-                            <p class="job">产品经理 | 多桔子信息科技有限公司</p>
+                            <p class="create-time">2012/03-2012/08</p>
+                            <p class="job">校企合作</p>
                             <ul>
-                                <li>团队管理，电商产品管理，电子商务策划项目管理；</li>
-                                <li>网站需求分析，产品设计，产品跟踪，及后续产品优化工作；</li>
-                                <li>与研发、营销、客服配合，展开产品开发、销售、售后工作；</li>
-                                <li>产品应用市场调研和分析；</li>
-                                <li>公司品牌宣传，产品推广，负责公司网站策划和运营工作。</li>
+                                <li>电影《幸福迷途》制作(部分场景合成和添加字幕)</li>
                             </ul>
                         </div>
                     </div>
@@ -128,15 +85,60 @@
                             <img class="company-logo" src="./static/image/LOGO5.png" alt="">
                         </div>
                         <div class="work-content">
-                            <p class="create-time">2014.10 - 2016.10</p>
-                            <p class="job">软件开发工程师 | SINGU</p>
+                            <p class="create-time">2014/09-2015/02(实习)</p>
+                            <p class="job">珠海市湘乡文化传播有限公司(合成剪辑)</p>
                             <ul>
-                                <li>负责公司内部业务系统的设计及改进，参与公司网上商城系统产品功能设计及实施工作；</li>
-                                <li>负责客户调研、客户需求分析、方案写作等工作；</li>
+                                <li>主要负责大小商业晚会及发布会拍摄与视频剪辑，其中有珠海东坑 烈士纪念日拍摄 ;</li>
+                                <li>珠海第十届航空航展博览会拍摄及制作;珠海粤 港澳三地消防演习拍摄等</li>
                             </ul>
-                            <p class="key-word">参与公司多个大型电子商务项目的策划工作，担任大商集团网上商城一期建设项目经理。</p>
                         </div>
                     </div>
+
+
+                    <div class="item w-experience-content">
+                        <div class="logo">
+                            <img class="company-logo" src="./static/image/LOGO4.png" alt="">
+                        </div>
+                        <div class="work-content">
+                            <p class="create-time">2015/03-2015/06(实习)</p>
+                            <p class="job">创宏网络有限公司(合成剪辑 摄像)</p>
+                            <ul>
+                                <li>要负责拍摄产品以及宣传片剪辑制作。其中有珠海泰丽宫宣传片剪
+                                    辑及产品拍摄;</li>
+                                <li>微商联盟产品拍摄及产品上架页面图片制作和产品
+                                    宣传片制作;</li>
+                                <li>及产品微信公众号完善等</li>
+                            </ul>
+                        </div>
+                    </div>
+
+
+                    <div class="item w-experience-content">
+                        <div class="logo">
+                            <img class="company-logo" src="./static/image/LOGO4.png" alt="">
+                        </div>
+                        <div class="work-content">
+                            <p class="create-time">2015/07-2017/11</p>
+                            <p class="job">珠海市杨氏网络动画设计有限公司(合成剪辑)</p>
+                            <ul>
+                                <li>【电视节目】</li>
+                                <li>2017年安徽卫视金鸡报晚幸福年春节联欢晚会</li>
+                                <li>2017年中央电视台 CCTV-4春节特别节目《欢乐一家亲》</li>
+                                <li>2017年湖北武汉电视台— 荆楚楷模晚会</li>
+                                <li>2017年中央电视台戏曲频道 CCTV-11《中国戏曲大会》</li>
+                                <li>2017年央视 -欢乐一家亲巡回演唱会(拉萨站)</li>
+                                <li>【3D动画】</li>
+                                <li>兵马俑 安徽 VR体验馆 -穿越三国</li>
+                                <li>2017珠海地税 _文创 朝阳恐龙 3D视频</li>
+                                <li>【宣传片】</li>
+                                <li>山东莱阳婚礼(宣传片剪辑、后期合成、全景图拼接)</li>
+                                <li>安徽诺儿动漫科技宣传片</li>
+                                <li>【舞台背景】</li>
+                                <li>黄梅戏 -龙女、黄梅戏 -天仙配</li>
+                            </ul>
+                        </div>
+                    </div>
+
                 </div>
             </section>
         </main>
@@ -146,15 +148,15 @@
                     <p>联系我</p>
                 </div>
                 <div class="peasonal-message">
-                    <img class="peasonal-image" src="./static/image/peason.png" alt="">
+                    <img class="peasonal-image" src="./static/image/tx.jpg" alt="">
                     <div class="item">
-                        <p class="name">梁博奇 Alex</p>
-                        <p class="phone">135 1111 8888</p>
-                        <p class="email">XXXXXX@sina.com</p>
+                        <p class="name">郭焕明 Ellen</p>
+                        <p class="phone">13425072***</p>
+                        <p class="email">1770681273@qq.com</p>
                     </div>
                     <div class="item contact">
                         <div class="col-3 qrcode">
-                            <img class="qr-image" src="./static/image/QRCode.png" alt="">
+                            <img class="qr-image" src="" alt="">
                         </div>
                         <div class="col-9">
                             <p>了解更多的我</p>
@@ -165,7 +167,7 @@
                                 <a href="#" class="icon">
                                     <img src="./static/image/zhihuICON.png" alt="">
                                 </a>
-                                <a href="#" class="icon">
+                                <a href="https://weibo.com/u/2173859320" class="icon">
                                     <img src="./static/image/weiboICON.png" alt="">
                                 </a>
                                 <a href="#" class="icon">
@@ -176,7 +178,7 @@
                     </div>
                 </div>
             </section>
-            <p class="footer">© Gitee.com</p>
+            <p class="footer">© ellenming</p>
         </footer>
     </div>
 </body>
